Add loading screen to finer section to accomodate slow internet connections.

--- a/_includes/finder.html
+++ b/_includes/finder.html
@@ -1,3 +1,28 @@
+<!-- SECTION LOADING -->
+<div class="finder_section" data-value="0" id="section_loading">
+<div class="finder-main-section main-section" id="mainsection">  
+
+    <div class="finder-wrapper c-wrapper c-wrapper-bg-transparent container-fluid layout top-of-page">
+        <div class="row">
+            <div class="col-12 col-lg-12 col-xl-12">
+     
+
+                       
+                            <h2 class="top-of-page loading">Loading...</h2>
+                
+                        
+                
+            </div>
+        </div>
+
+    </div>
+
+</div>
+    
+</div>
+
+
+
 <!-- SECTION 0 - GET STARTED -->
 <div class="finder_section" data-value="0" id="section_0">
 <div class="finder-main-section main-section" id="mainsection">  
