--- a/_sass/_mobileTest.scss
+++ b/_sass/_mobileTest.scss
@@ -117,6 +117,12 @@
 
     .top-of-page {
         padding-top: 0;
+        
+        &.loading {
+            text-align: center;
+            margin: 20px 40px 40px 40px;
+            font-weight: 400;
+        }
     }
 
     /* FINDER SECTION */
